Resource class is applied to cart fragment and main page's api calls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="continue_to_explore">Continue to explore</string>
     <string name="your_order_has_been_received_successfully">Your order has been received successfully</string>
     <string name="account">Account</string>
+    <string name="error_message">Please check your internet connection and try again later.</string>
+    <string name="retry_btn">Retry</string>
 </resources>
